Fix custom colors, add rounded upload areas and hover effects, style buttons to match screenshots

--- a/tools/circle.html
+++ b/tools/circle.html
@@ -107,6 +107,10 @@
             }
         });
 
+        document.getElementById('customBg').addEventListener('input', () => {
+            if (img && currentBg === 'custom') drawCircle();
+        });
+
         document.getElementById('downloadBtn').addEventListener('click', () => {
             downloadCanvas(canvas, originalFilename, 'circle');
         });
