--- a/tools/square.html
+++ b/tools/square.html
@@ -102,6 +102,10 @@
             }
         });
 
+        document.getElementById('customBg').addEventListener('input', () => {
+            if (img && currentBg === 'custom') drawSquare();
+        });
+
         document.getElementById('downloadBtn').addEventListener('click', () => {
             downloadCanvas(canvas, originalFilename, 'square');
         });
