--- a/tools/rounded.html
+++ b/tools/rounded.html
@@ -20,28 +20,29 @@
                 <line x1="12" y1="15" x2="12" y2="3"/>
             </svg>
             <p>Click to upload or paste image from clipboard</p>
+            <input id="fileInput" type="file" accept="image/*" style="display:none" />
         </div>
         <canvas id="canvas" style="display:none;"></canvas>
         <div class="customization" id="customization">
             <label>Radius:</label>
-            <div class="button-group" id="radiusButtons">
-                <button data-value="2">2px</button>
-                <button data-value="4">4px</button>
-                <button data-value="8">8px</button>
-                <button data-value="16">16px</button>
-                <button data-value="32">32px</button>
-                <button data-value="64">64px</button>
-                <button data-value="custom">Custom</button>
+            <div class="segmented" id="radiusSegmented" role="tablist">
+                <button data-value="2" role="tab">2px</button>
+                <button data-value="4" role="tab">4px</button>
+                <button data-value="8" class="active" aria-selected="true" role="tab">8px</button>
+                <button data-value="16" role="tab">16px</button>
+                <button data-value="32" role="tab">32px</button>
+                <button data-value="64" role="tab">64px</button>
+                <button data-value="custom" role="tab">Custom</button>
             </div>
             <div class="custom-field" id="radiusField">
                 <input type="number" id="customRadius" placeholder="Radius">
             </div>
             <label>Background:</label>
-            <div class="button-group" id="bgButtons">
-                <button data-value="white">White</button>
-                <button data-value="black">Black</button>
-                <button data-value="transparent">Transparent</button>
-                <button data-value="custom">Custom</button>
+            <div class="segmented" id="bgSegmented" role="tablist">
+                <button data-value="white" class="active" aria-selected="true" role="tab">White</button>
+                <button data-value="black" role="tab">Black</button>
+                <button data-value="transparent" role="tab">Transparent</button>
+                <button data-value="custom" role="tab">Custom</button>
             </div>
             <div class="custom-field" id="bgField">
                 <input type="color" id="customBg">
@@ -58,13 +59,11 @@
         let currentRadius = '8';
         let currentBg = 'white';
 
-        document.getElementById('uploadArea').addEventListener('click', () => {
-            const input = document.createElement('input');
-            input.type = 'file';
-            input.accept = 'image/*';
-            input.onchange = (e) => loadImage(e.target.files[0]);
-            input.click();
-        });
+        bindPersistentFileInput(
+            document.getElementById('uploadArea'),
+            document.getElementById('fileInput'),
+            (file) => loadImage(file)
+        );
 
         handleClipboardPaste((pastedImg) => {
             img = pastedImg;
@@ -109,20 +108,20 @@
             ctx.restore();
         }
 
-        document.getElementById('radiusButtons').addEventListener('click', (e) => {
+        initSegmented(document.getElementById('radiusSegmented'));
+        document.getElementById('radiusSegmented').addEventListener('click', (e) => {
             if (e.target.tagName === 'BUTTON') {
-                document.querySelectorAll('#radiusButtons button').forEach(btn => btn.classList.remove('active'));
-                e.target.classList.add('active');
+                document.querySelectorAll('#radiusSegmented button').forEach(btn => btn.setAttribute('aria-selected', btn === e.target ? 'true' : 'false'));
                 currentRadius = e.target.dataset.value;
                 if (img) drawRounded();
                 document.getElementById('radiusField').classList.toggle('show', currentRadius === 'custom');
             }
         });
 
-        document.getElementById('bgButtons').addEventListener('click', (e) => {
+        initSegmented(document.getElementById('bgSegmented'));
+        document.getElementById('bgSegmented').addEventListener('click', (e) => {
             if (e.target.tagName === 'BUTTON') {
-                document.querySelectorAll('#bgButtons button').forEach(btn => btn.classList.remove('active'));
-                e.target.classList.add('active');
+                document.querySelectorAll('#bgSegmented button').forEach(btn => btn.setAttribute('aria-selected', btn === e.target ? 'true' : 'false'));
                 currentBg = e.target.dataset.value;
                 if (img) drawRounded();
                 document.getElementById('bgField').classList.toggle('show', currentBg === 'custom');
