fix: defensive parsing for numeric inputs; make option lists horizontal; add temporary footer

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manipic - Image Tools</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1 class="lora-unique">Manipic</h1>
@@ -22,5 +25,12 @@
         </nav>
     </div>
     <script src="script.js"></script>
+    <div class="footer">
+            <a href="https://github.com/nielsjaspers/manipic" target="_blank">View GitHub Repo</a>
+            <br/>
+            <br/>
+            Inspired by quickpic
+    </div>
 </body>
+
 </html>
