--- a/tools/square.html
+++ b/tools/square.html
@@ -25,11 +25,11 @@
         <canvas id="canvas" style="display:none;"></canvas>
         <div class="customization" id="customization">
             <label>Background:</label>
-            <div class="segmented" id="bgSegmented" role="tablist">
-                <button data-value="white" class="active" aria-selected="true" role="tab">White</button>
-                <button data-value="black" role="tab">Black</button>
-                <button data-value="transparent" role="tab">Transparent</button>
-                <button data-value="custom" role="tab">Custom</button>
+            <div class="button-list" id="bgList">
+                <button data-value="white" class="active">White</button>
+                <button data-value="black">Black</button>
+                <button data-value="transparent">Transparent</button>
+                <button data-value="custom">Custom</button>
             </div>
             <div class="custom-field" id="customField">
                 <input type="color" id="customBg">
@@ -91,10 +91,10 @@
             ctx.drawImage(img, x, y);
         }
 
-        initSegmented(document.getElementById('bgSegmented'));
-        document.getElementById('bgSegmented').addEventListener('click', (e) => {
+        document.getElementById('bgList').addEventListener('click', (e) => {
             if (e.target.tagName === 'BUTTON') {
-                document.querySelectorAll('#bgSegmented button').forEach(btn => btn.setAttribute('aria-selected', btn === e.target ? 'true' : 'false'));
+                document.querySelectorAll('#bgList button').forEach(btn => btn.classList.remove('active'));
+                e.target.classList.add('active');
                 currentBg = e.target.dataset.value;
                 if (img) drawSquare();
                 document.getElementById('customField').classList.toggle('show', currentBg === 'custom');
