--- a/tools/rounded.html
+++ b/tools/rounded.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="../favicon-64x64.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="../favicon-128x128.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="../favicon-128x128.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div class="tool-container">
